--- a/murals/templates/murals/index.html
+++ b/murals/templates/murals/index.html
@@ -33,6 +33,16 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
+                <div class="col-sm-3 col-md-3 pull-right">
+                    <form class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" name="search-stripe" id="search-stripe">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
