--- a/templates/base.html
+++ b/templates/base.html
@@ -60,13 +60,10 @@
     <script src="{% static 'js/classie.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/cbpAnimatedHeader.js' %}" type="text/javascript"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="{% static 'js/jqBootstrapValidation.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/contact_me.js' %}" type="text/javascript"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/agency.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/murals/portfolio_strip.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/murals/murals.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/murals/map.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/murals/conf.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/murals/main.js' %}" type="text/javascript"></script>
