get modal through rest api call

--- a/murals/templates/murals/index.html
+++ b/murals/templates/murals/index.html
@@ -75,7 +75,7 @@
             <div class="row portfolio-strip">
                 {% for strip in strips %}
                     <div class="col-md-4 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal{{ strip.id }}" data-id="{{ strip.id }}" data-toggle="modal" class="portfolio-link">
+                        <a href="#strip-modal" data-id="{{ strip.id }}" data-toggle="modal" class="portfolio-link">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -192,35 +192,8 @@
         </div>
     </footer>
 
-{% for strip in strips %}
-    <div class="portfolio-modal modal fade" id="portfolioModal{{ strip.id }}" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>{{ strip.title }}</h2>
-                            <p class="item-intro text-muted">by {{ strip.artist.name }}</p>
-                            {% if strip.image_big %}
-                                <img class="img-responsive img-centered" src="{{ strip.image_big.url }}" alt="">
-                            {% else %}
-                                <img class="img-responsive img-centered" src="{% static 'img/portfolio/golden-preview.png' %}" alt="">
-                            {% endif %}
-                            <p>Some more info about the strip and the artist</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="portfolio-modal modal fade" id="strip-modal" tabindex="-1" role="dialog" aria-hidden="true">
+
     </div>
-{% endfor %}
 
 {% endblock %}
