fix search, switcher dependencies

--- a/murals/templates/murals/index.html
+++ b/murals/templates/murals/index.html
@@ -32,7 +32,10 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                </ul>
+                </ul>       <!-- 
+                    <form class="navbar-form searching" role="search">
+                            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" data-role="tagsinput">
+                    </form> -->
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -97,7 +100,7 @@
                 <div class="col-lg-12">
                 <div id="map-area">
                     <div class="map-switcher">
-                        <input type="text" placeholder="Search">
+                        <input type="text" placeholder="Search mural or artist">  
                         <input type="checkbox" name="map-switcher" checked>
                     </div>
                     <div id="map-canvas">
