--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
 
     <script type="text/javascript">
         DJANGO_MEDIA_URL = '{{ MEDIA_URL }}';
+        DJANGO_STATIC_URL = '{{ STATIC_URL }}';
     </script>
 </body>
 
